--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -2,4 +2,7 @@
   test works!
 </p>
 
-<div ace [value]="''" style=" height: 300px;"></div>
+<div ace [mode]="'javascript'" [value]="terminalText"
+     style=" height: 300px;"></div>
+<div ace [mode]="'typescript'" [value]="terminalText"
+     style=" height: 300px;"></div>
