--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -6,3 +6,7 @@
      style=" height: 300px;"></div>
 <div ace mode="sh" [showLineNumbers]="false" theme="terminal" [value]="terminalText"
      style=" height: 300px;"></div>
+
+<div style="height: 500px">
+  <ace-editor></ace-editor>
+</div>
